# ascon-provider

./: .gitmodules  CMakeLists.txt  README.md  akif_ascon.c  akif_ascon_aead128.c  akif_ascon_aead128.h  akif_ascon_aead128a.c  akif_ascon_aead128a.h  akif_ascon_aead80pq.c  akif_ascon_aead80pq.h  akif_ascon_cipher.h  akif_ascon_common.c  akif_ascon_common.h  akif_ascon_digest_hash.c  akif_ascon_digest_hash.h  akif_ascon_digest_xof.c  akif_ascon_digest_xof.h  test_akif_ascon.c  test_akif_ascon_err.c  v_params.c  vigenere.c
.github/workflows/: pr-checks.yml
doc/man7/: ascon128.pod
providers/implementations/ciphers/: build.info  cipher_ascon.c  cipher_ascon.h  cipher_ascon128.c  cipher_ascon128.h  ciphercommon_ascon.c  ciphercommon_ascon.h  ciphercommon_ascon_compat.h
providers/implementations/ciphers/ascon/: build.info
t/: 00-list.t  01-cipher.t
tests/: test_ascon.c  test_ascon_err.c  test_common.c  test_common.h
tests/recipes/: 00-list.t  01-cipher.t  80-test_ascon.t  WrapOpenSSL.pm
